# yt_music_bot

./: .gitignore  README.md  ansible-example.cfg  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  inventory-example.ini  makefile  pyproject.toml
bot/: __main__.py  config.py
bot/filters/: __init__.py  admin.py
bot/handlers/: __init__.py  admin_handlers.py  handlers.py
bot/misc/: __init__.py  bot_commands.py  enums.py  func.py  help_command.py
bot/schemas/: __init__.py  schemes.py
bot/services/: __init__.py  playlist.py  track.py  user.py
docker/: back.Dockerfile  bot.Dockerfile  lab.Dockerfile
playbooks/: dev.yml  prod.yml
src/: __main__.py  config.py
src/db/: __init__.py  engine.py  models.py
src/migrations/: env.py
src/migrations/versions/: 3ef1cd8ecfef_reinit.py  868a78757f5c_init.py  8f4a92f6824d_thumbnail.py  e186adbfc0ce_init.py
src/repository/: __init__.py  repositories.py  unitofwork.py
src/routers/: __init__.py  playlist_router.py  track_router.py  user.py
src/schemas/: __init__.py  schemas.py
src/services/: __init__.py  misc.py  playlist.py  track_service.py  user.py  yt_service.py
src/tasks/: tasks.py
