[tool.poetry]
name = "dmkh"
version = "0.1.0"
description = "Telegram YT Music Bot"
authors = ["averagepythonfan <djonvorobei@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.bot.dependencies]
aiogram = "^3.1.1"


[tool.poetry.group.dev.dependencies]
ansible = "^8.6.1"


[tool.poetry.group.lab.dependencies]
jupyterlab = "4.0.7"
yt-dlp = "^2023.10.13"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
