[tool.poetry]
name = "dmkh"
version = "0.1.0"
description = "Telegram YT Music Bot"
authors = ["averagepythonfan <djonvorobei@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.bot.dependencies]
aiogram = "^3.1.1"
redis = "^5.0.1"
aioredis = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ansible = "^8.6.1"


[tool.poetry.group.lab.dependencies]
jupyterlab = "4.0.7"
yt-dlp = "^2023.10.13"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
pydub = "^0.25.1"


[tool.poetry.group.back.dependencies]
fastapi = "0.103.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
yt-dlp = "^2023.10.13"
pydub = "^0.25.1"
aiohttp = "^3.8.6"
pillow = "^10.1.0"


[tool.poetry.group.build.dependencies]
ruff = "^0.1.5"


[tool.ruff]
exclude = [
    "docker",
    ".vscode",
    ".ruff_cache"
]
line-length = 88

[tool.ruff.lint]
ignore = [ "F401", "E402" ]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
